--- a/site/package.json
+++ b/site/package.json
@@ -31,11 +31,13 @@
     "body-scroll-lock": "^4.0.0-beta.0",
     "clsx": "^1.1.1",
     "email-validator": "^2.0.4",
+    "glightbox": "^3.2.0",
     "js-cookie": "^3.0.1",
     "keen-slider": "^6.7.0",
     "lodash.random": "^3.2.0",
     "lodash.throttle": "^4.1.1",
     "next": "^13.0.4",
+    "next-cloudinary": "^4.0.0",
     "next-themes": "^0.2.0",
     "postcss": "^8.3.5",
     "postcss-nesting": "^10.1.10",
@@ -44,6 +46,7 @@
     "react-fast-marquee": "^1.3.1",
     "react-merge-refs": "^2.0.1",
     "react-use-measure": "^2.1.1",
+    "swiper": "^9.1.0",
     "tabbable": "^5.2.1",
     "tailwindcss": "^3.0.13"
   },
