--- a/site/package.json
+++ b/site/package.json
@@ -53,6 +53,8 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.8",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/imagemin": "^8.0.1",
+    "@types/imagemin-jpegtran": "^5.0.1",
     "@types/js-cookie": "^3.0.1",
     "@types/lodash.random": "^3.2.6",
     "@types/lodash.throttle": "^4.1.6",
@@ -62,6 +64,8 @@
     "eslint": "^8.6.0",
     "eslint-config-next": "^12.0.8",
     "eslint-config-prettier": "^8.3.0",
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
     "lint-staged": "^13.0.3",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.2.3",
