--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,8 @@
   },
   "sideEffects": false,
   "dependencies": {
+    "@cloudinary/react": "^1.11.1",
+    "@cloudinary/url-gen": "^1.9.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@react-spring/web": "^9.4.1",
     "@vercel/commerce": "workspace:*",
