--- a/site/package.json
+++ b/site/package.json
@@ -17,6 +17,7 @@
     "@cloudinary/url-gen": "^1.9.2",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@react-spring/web": "^9.4.1",
+    "@vercel/analytics": "^0.1.11",
     "@vercel/commerce": "workspace:*",
     "@vercel/commerce-bigcommerce": "workspace:*",
     "@vercel/commerce-commercejs": "workspace:*",
