--- a/site/package.json
+++ b/site/package.json
@@ -37,6 +37,7 @@
     "glightbox": "^3.2.0",
     "js-cookie": "^3.0.1",
     "keen-slider": "^6.7.0",
+    "lodash": "^4.17.21",
     "lodash.random": "^3.2.0",
     "lodash.throttle": "^4.1.1",
     "next": "^13.0.4",
@@ -59,6 +60,7 @@
     "@types/imagemin": "^8.0.1",
     "@types/imagemin-jpegtran": "^5.0.1",
     "@types/js-cookie": "^3.0.1",
+    "@types/lodash": "^4.14.191",
     "@types/lodash.random": "^3.2.6",
     "@types/lodash.throttle": "^4.1.6",
     "@types/node": "^18.0.3",
