--- a/site/package.json
+++ b/site/package.json
@@ -55,6 +55,7 @@
     "tailwindcss": "^3.0.13"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@next/bundle-analyzer": "^12.0.8",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/imagemin": "^8.0.1",
