--- a/site/package.json
+++ b/site/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.1",
     "react-merge-refs": "^2.0.1",
+    "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
     "swiper": "^9.1.0",
     "tabbable": "^5.2.1",
