--- a/site/package.json
+++ b/site/package.json
@@ -13,10 +13,10 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@cloudinary/react": "^1.11.1",
-    "@cloudinary/url-gen": "^1.9.2",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.1",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
-    "@react-spring/web": "^9.4.1",
+    "@react-spring/web": "^9.7.2",
     "@vercel/analytics": "^0.1.11",
     "@vercel/commerce": "workspace:*",
     "@vercel/commerce-bigcommerce": "workspace:*",
@@ -30,52 +30,52 @@
     "@vercel/commerce-spree": "workspace:*",
     "@vercel/commerce-swell": "workspace:*",
     "@vercel/commerce-vendure": "workspace:*",
-    "autoprefixer": "^10.4.2",
-    "body-scroll-lock": "^4.0.0-beta.0",
-    "clsx": "^1.1.1",
+    "autoprefixer": "^10.4.14",
+    "body-scroll-lock": "4.0.0-beta.0",
+    "clsx": "^1.2.1",
     "email-validator": "^2.0.4",
     "glightbox": "^3.2.0",
-    "js-cookie": "^3.0.1",
-    "keen-slider": "^6.7.0",
+    "js-cookie": "^3.0.5",
+    "keen-slider": "^6.8.5",
     "lodash": "^4.17.21",
     "lodash.random": "^3.2.0",
     "lodash.throttle": "^4.1.1",
-    "next": "^13.0.4",
-    "next-cloudinary": "^4.0.0",
-    "next-themes": "^0.2.0",
-    "postcss": "^8.3.5",
-    "postcss-nesting": "^10.1.10",
+    "next": "^13.4.5",
+    "next-cloudinary": "^4.12.0",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.24",
+    "postcss-nesting": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.1",
-    "react-merge-refs": "^2.0.1",
+    "react-fast-marquee": "^1.6.0",
+    "react-merge-refs": "^2.0.2",
     "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
-    "swiper": "^9.1.0",
-    "tabbable": "^5.2.1",
-    "tailwindcss": "^3.0.13"
+    "swiper": "^9.4.0",
+    "tabbable": "^5.3.3",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.8",
+    "@next/bundle-analyzer": "^12.3.4",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/imagemin": "^8.0.1",
     "@types/imagemin-jpegtran": "^5.0.1",
-    "@types/js-cookie": "^3.0.1",
-    "@types/lodash": "^4.14.191",
-    "@types/lodash.random": "^3.2.6",
-    "@types/lodash.throttle": "^4.1.6",
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.6",
-    "eslint": "^8.6.0",
-    "eslint-config-next": "^12.0.8",
-    "eslint-config-prettier": "^8.3.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.195",
+    "@types/lodash.random": "^3.2.7",
+    "@types/lodash.throttle": "^4.1.7",
+    "@types/node": "^18.16.18",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "^12.3.4",
+    "eslint-config-prettier": "^8.8.0",
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
-    "lint-staged": "^13.0.3",
+    "lint-staged": "^13.2.2",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-preset-env": "^7.2.3",
-    "prettier": "^2.5.1",
+    "postcss-preset-env": "^7.8.3",
+    "prettier": "^2.8.8",
     "typescript": "4.7.4"
   },
   "lint-staged": {
