--- a/site/package.json
+++ b/site/package.json
@@ -43,6 +43,7 @@
     "next": "^13.4.5",
     "next-cloudinary": "^4.12.0",
     "next-themes": "^0.2.1",
+    "node-telegram-bot-api": "^0.61.0",
     "postcss": "^8.4.24",
     "postcss-nesting": "^10.2.0",
     "react": "^18.2.0",
@@ -51,6 +52,7 @@
     "react-merge-refs": "^2.0.2",
     "react-responsive": "^9.0.2",
     "react-use-measure": "^2.1.1",
+    "seamless-scroll-polyfill": "^2.3.4",
     "swiper": "^9.4.0",
     "tabbable": "^5.3.3",
     "tailwindcss": "^3.3.2"
@@ -58,13 +60,16 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.4",
     "@types/body-scroll-lock": "^3.1.0",
+    "@types/formidable": "^3.4.0",
     "@types/imagemin": "^8.0.1",
     "@types/imagemin-jpegtran": "^5.0.1",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.195",
     "@types/lodash.random": "^3.2.7",
     "@types/lodash.throttle": "^4.1.7",
+    "@types/multiparty": "^0.0.33",
     "@types/node": "^18.16.18",
+    "@types/node-telegram-bot-api": "^0.61.6",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "eslint": "^8.42.0",
